# mvdr_2mic

./: CMakeLists.txt  README.md  main.cpp  mvdr_engine  mvdr_neon.h  mvdr_test.py
tests/: README.md  generate_test_wav.py  run_polar_test.py
